# ArchiveManager

./: CMakeLists.txt  EnhancedUnZipPanel.cpp  EnhancedUnZipPanel.h  EnhancedZipPanel.cpp  EnhancedZipPanel.h  PathOptimizer.h  README.md  bundle.sh  main.cpp
ArchiveManager.app/Contents/: Info.plist
ArchiveManager.app/Contents/MacOS/: ArchiveManager
Test.app/Contents/: Info.plist
YourApp.app/Contents/: Info.plist
